# ZeroTrustChat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.run/: ZChatApplication.run.xml
Client/: README.md
Client/Android/: README.md  gradle.properties  local.properties  settings.gradle.kts
Client/Android/app/: build.gradle.kts  google-services.json
Client/Android/app/src/main/: AndroidManifest.xml
Client/Android/app/src/main/res/drawable/: bg_chat_input_field.xml  bg_conversation_unread_badge.xml  ic_avatar_default.xml  ic_chat_emoji.xml  ic_chat_send.xml  ic_chat_voice.xml  ic_launcher_foreground.xml  ic_nav_chat.xml  ic_notification.xml  voice_call_bubble_bg.xml
Client/Android/app/src/main/res/layout/: activity_add_friend.xml  activity_chat.xml  activity_chat_placeholder.xml  activity_chat_settings.xml  activity_friend_detail.xml  activity_friend_requests.xml  activity_login.xml  activity_main.xml  activity_main_placeholder.xml  activity_profile_edit.xml  (+16 more)
Client/Android/gradle/: libs.versions.toml
Client/Android/gradle/wrapper/: gradle-wrapper.properties
Client/Windows/: Resource.h  ZChat.cpp  ZChat.rc  ZChat.sln  ZChat.vcxproj  ZChat.vcxproj.filters
ZChatIM/: CMakeLists.txt  CMakePresets.json  ZChatIM.cpp  ZChatIM.h  build-jni-linux.sh  launch.vs.json  main.cpp  vcpkg.json
ZChatIM/docs/: BUILD-WINDOWS.md  Build.md  Implementation-Status.md  JNI-API-Documentation.md  README.md  Scope.md
ZChatIM/include/: Logger.h  Types.h
ZChatIM/include/common/: Ed25519.h  File.h  JniSecurityPolicy.h  Memory.h  OpenSsl3Required.h  Random.h  String.h  Time.h  Utils.h
ZChatIM/include/jni/: JniBridge.h  JniException.h  JniInterface.h  JniUtils.h
ZChatIM/include/jni/utils/: JniException.h  JniUtils.h
ZChatIM/include/mm1/: AccountDeleteManager.h  AntiDebug.h  AuthSessionManager.h  CertPinningManager.h  DeviceSessionManager.h  FriendManager.h  FriendNoteManager.h  FriendVerificationManager.h  GroupManager.h  GroupMuteManager.h  GroupNameManager.h  JniSecurity.h  KeyManagement.h  MM1.h  MemoryEncryption.h  MentionPermissionManager.h  MessageEditManager.h  MessageEditOrchestration.h  MessageRecallManager.h  MessageReplyManager.h  SecureRandom.h  SecurityMemory.h  SessionActivityManager.h  SideChannel.h  SystemControl.h  UserDataManager.h  UserStatusManager.h
ZChatIM/include/mm1/managers/: AccountDeleteManager.h  AuthSessionManager.h  CertPinningManager.h  DeviceSessionManager.h  FriendManager.h  FriendNoteManager.h  FriendVerificationManager.h  GroupManager.h  GroupMuteManager.h  GroupNameManager.h  LocalAccountCredentialManager.h  MediaCallCoordinator.h  MentionPermissionManager.h  MessageEditManager.h  MessageEditOrchestration.h  MessageRecallManager.h  MessageReplyManager.h  RtcCallManager.h  RtcCallSessionManager.h  SessionActivityManager.h  SystemControl.h  UserDataManager.h  UserStatusManager.h  VoiceVideoCallManager.h
ZChatIM/include/mm2/: BlockIndex.h  Crypto.h  MM2.h  MessageBlock.h  MessageQueryManager.h  StorageIntegrityManager.h  ZdbFile.h  ZdbManager.h
ZChatIM/include/mm2/crypto/: Sha256.h
ZChatIM/include/mm2/storage/: BlockIndex.h  Crypto.h  MessageBlock.h  MessageQueryManager.h  SqliteMetadataDb.h  StorageIntegrityManager.h  ZdbFile.h  ZdbManager.h
ZChatIM/jni/: JniNatives.cpp  ZChatIMJNI.cpp
ZChatIM/src/common/: Ed25519.cpp  File.cpp  Logger.cpp  Memory.cpp  Random.cpp  String.cpp  Time.cpp  Utils.cpp
ZChatIM/src/jni/: JniBridge.cpp  JniInterface.cpp
ZChatIM/src/mm1/: MM1.cpp  MM1_security_submodules.cpp
ZChatIM/src/mm1/managers/: AccountDeleteManager.cpp  AuthSessionManager.cpp  FriendManager.cpp  FriendNoteManager.cpp  FriendVerificationManager.cpp  GroupManager.cpp  GroupMuteManager.cpp  GroupNameManager.cpp  LocalAccountCredentialManager.cpp  MM1_manager_stubs.cpp  MediaCallCoordinator.cpp  MentionPermissionManager.cpp  MessageEditManager.cpp  MessageRecallManager.cpp  MessageReplyManager.cpp  RtcCallManager.cpp  RtcCallSessionManager.cpp  SessionActivityManager.cpp  UserDataManager.cpp  VoiceVideoCallManager.cpp
ZChatIM/src/mm2/: MM2.cpp  MM2_message_key_darwin.cpp  MM2_message_key_passphrase.cpp
ZChatIM/src/mm2/crypto/: Sha256.cpp
ZChatIM/src/mm2/storage/: BlockIndex.cpp  Crypto.cpp  MessageQueryManager.cpp  SqliteMetadataDb.cpp  StorageIntegrityManager.cpp  ZdbFile.cpp  ZdbManager.cpp
ZChatServer/: pom.xml  run-dev.cmd
ZChatServer/scripts/: populate-linux-native-resources.sh
ZChatServer/src/main/resources/: application.yml
ZChatServer/src/main/resources/native/linux-x64/: README.md
ZChatServer/src/main/resources/native/windows-x64/: README.md
ZChatServer/src/main/resources/static/ops/: index.html  login.html
data/gradle-offline/: README.md
data/zchatim_min_batch_1854901101358994386665900/idx/: zchatim_metadata.db-journal
data/zchatim_min_complete_3128390539358991433806100/idx/: zchatim_metadata.db-journal
data/zchatim_min_fc_3298610616358989959621900/idx/: zchatim_metadata.db-journal
data/zchatim_min_msg_2151649447358992908885400/idx/: zchatim_metadata.db  zchatim_metadata.db-journal
docs/: AUTHORITY.md  CPP-Spec.md  MM1-Spec.md  README.md  SQLite-Spec.md  SpringBoot-Spec.md  ZSP-Protocol-Spec.md  技术方案文档.md
docs/01-Architecture/: 01-Overview.md  02-ZSP-Protocol.md  03-ZSP-Gateway-Client-Contract.md
docs/02-Core/: 01-MM1.md  02-MM2.md  03-Storage.md  04-ZdbBinaryLayout.md  05-ZChatIM-Implementation-Status.md
docs/03-Business/: 01-SpringBoot.md  02-Auth.md  03-Group.md  04-Session.md  05-KeyRotate.md  06-AccountDelete.md
docs/04-Features/: 01-MessageSync.md  02-MessageRecall.md  03-MessageCache.md  04-Retry.md  05-FriendVerify.md  06-MultiDevice.md  07-CertPinning.md  08-FileTransfer.md  09-MessageEdit.md  10-MessageReply.md  11-GroupMute.md  12-Mention.md  13-GroupName.md  14-Android-Client-ZChat.md  README.md
docs/05-Operations/: 01-Backup.md
docs/06-Appendix/: 01-JNI.md  02-Performance.md  03-Version.md
docs/07-Engineering/: 01-Build-ZChatIM.md  02-Cpp-Completion-Roadmap.md  03-M2-Minimal-ServerOwnedDevices.md  04-M2-Key-Policy-And-Extensions.md  README.md
(+154 files in other folders)
